# house-and-land-packager

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.frontend  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
Reference/: Data_Entity_Diagram.md  Data_Extraction_Mapping.md  LAAS_Combined_BRD.docx  PRICING_SHEET_ANALYSIS.md  PackagingRequirements_Document.docx  Pricing sheet .xlsm  Pricing sheet 2026.xlsm  ROI_Analysis.md  changes.md  land_search_interface.html
data/seed/: commission_rates.csv  energy_ratings.csv  estates_stages.csv  fbc_escalation_bands.csv  guideline_types.csv  house_designs.csv  house_facades.csv  postcode_site_costs.csv  site_cost_items.csv  site_cost_tiers.csv  travel_surcharges.csv  upgrade_categories.csv  upgrade_items.csv  wholesale_groups.csv
docs/adr/: 001-jwt-self-managed-auth.md  002-auto-seed-on-startup.md  003-railway-volume-storage.md  004-status-transition-history.md  005-saved-filter-presets.md  006-bidirectional-clash-rules.md  007-conflict-detection-client-side.md  008-pricing-rule-condition-dsl.md  009-pricing-request-workflow.md  010-dashboard-aggregation.md
docs/api/: sprint-1-endpoints.md  sprint-2-endpoints.md  sprint-3-endpoints.md  sprint-4-endpoints.md  sprint-5-endpoints.md  sprint-6-endpoints.md  sprint-7-endpoints.md
docs/releases/: sprint-1-release-notes.md  sprint-2-release-notes.md  sprint-3-release-notes.md  (+4 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/: extract_pricing_to_csv.py
tests/: conftest.py
(+328 files in other folders)
